--- a/src/app/components/player-bar/player-bar.component.scss
+++ b/src/app/components/player-bar/player-bar.component.scss
@@ -5,7 +5,7 @@
     line-height:18px;
     overflow: hidden;
     
-    @media (max-width:$smallScreenCutoff) {
+    @media (max-width:$smallScreenCutoff - 1) {
         width:calc(100% - 66px);
     }
     @media (min-width:$smallScreenCutoff) {
